Fix bug in sl_random_level add some debugging stats
The debug stats are temporary, but useful for finding the issue in
random_level.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ useDynLib("rdict",
           .rdict_put = rdict_put,
           .rdict_mput = rdict_mput,
           .rdict_get = rdict_get,
-          .rdict_remove = rdict_remove)
+          .rdict_remove = rdict_remove,
+          .rdict_stats = rdict_stats)
 
 exportPattern("^[^\\.]")
