Add rdict_keys using undocumented R API for Rf_sortVector

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ useDynLib("rdict",
           .rdict_mput = rdict_mput,
           .rdict_get = rdict_get,
           .rdict_remove = rdict_remove,
-          .rdict_stats = rdict_stats)
+          .rdict_stats = rdict_stats,
+          .rdict_keys = rdict_keys)
 
 exportPattern("^[^\\.]")
