--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,10 @@ Title: R dictionary data type extension package
 Version: 0.0.1
 Author: Seth Falcon
 Maintainer: Seth Falcon <seth@userprimary.net>
-Description: Provides a hash-table data structure in R
-  more efficient than using R's environments
+Description: The rdict package provides a hash-table data structure
+  that can be more efficient than R's environments for some use cases.
+  The dictionary type is implemented in C using a skip list.  There is
+  no support for serializing rdict dictionaries.
 License: Artistic-2.0
 Suggests: RUnit
 
